# fastapi-boilerplate

./: .gitignore  Dockerfile  LICENSE  alembic.ini  pyproject.toml
alembic/: env.py
app/: app.py  config.py  models.py  utils.py
app/router/: controller.py
