[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = ""
authors = ["Ashwin <ashwins1211@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.71.0"
sqlmodel = "^0.0.6"
uvicorn = "^0.16.0"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
